# StellaClaw

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ALL_PROMPTS.md  BUGS.md  CODEX_TOOL_DIFF.md  Cargo.toml  FEATURES.md  IDEAL_STRUCTURE.md  LICENSE  LOGGING.md  NEW_MEMORY_SYSTEM.md  OPTIMIZATION_PLAN.md  README.md  README_zh.md  ROAD_MAP.md  SANDBOX_DESIGN.md  TODO.md  TODO_NewWeb.md  VERSION  deploy_telegram.json  example_config.json  graceful_restart.sh  restart_with_web.sh  run.sh  run_test.sh  test_telegram.json
agent_frame/: Cargo.toml  example_config.json  example_openrouter_config.json
agent_frame/.agent_frame/processes/: 3e13ab01-c697-4de3-8205-0b96d02bcc71.json  7c487e9f-9a9e-4814-ae3c-be538c024c18.json  8cc5153e-7766-4e3a-ae3d-cfef34db4815.json  8dd5c324-9589-4cc8-aa42-f85622696c76.json  920a623e-67d7-42ab-99f0-2707ec2be1a4.json  a8e6b3ca-17a0-433f-88bb-999834e1e25d.json  e9b2a974-89a9-4d50-b5ad-55e45afca588.json
agent_frame/src/: agent.rs  compaction.rs  config.rs  lib.rs  llm.rs  message.rs  modality.rs  skills.rs  token_estimation.rs  tool_worker.rs  tooling.rs
agent_frame/src/llm/providers/: claude_code.rs  codex_subscription.rs  mod.rs  openrouter.rs  openrouter_responses.rs
agent_frame/src/tooling/: download.rs  exec.rs  fs.rs  media.rs  remote.rs  runtime_state.rs
agent_frame/src/tooling/dsl/: SYNTAX.md  mod.rs  worker.py
agent_frame/tests/: integration.rs  live_openrouter.rs
agent_host/: Cargo.toml  example_config.json  example_dingtalk_config.json  example_telegram_config.json
agent_host/src/: attachment_prep.rs  backend.rs  bootstrap.rs  channel.rs  channel_auth.rs  child_rpc.rs  config.rs  config_editor.rs  conversation.rs  cron.rs  domain.rs  lib.rs  main.rs  prompt.rs  remote_execution.rs  sandbox.rs  server.rs  session.rs  session_protocol.rs  setup.rs  sink.rs  snapshot.rs  subagent.rs  transcript.rs  workpath.rs  workspace.rs
agent_host/src/channels/: command_line.rs  dingtalk.rs  dingtalk_robot.rs  mod.rs  telegram.rs  web.rs
agent_host/src/channels/web_static/: app.js  index.html  style.css
agent_host/src/config/: v0_1.rs  v0_10.rs  v0_11.rs  v0_12.rs  v0_13.rs  v0_14.rs  v0_15.rs  v0_2.rs  v0_22.rs  v0_23.rs  v0_24.rs  v0_25.rs  v0_26.rs  v0_27.rs  v0_28.rs  v0_3.rs  v0_4.rs  v0_5.rs  v0_6.rs  v0_7.rs  v0_8.rs  v0_9.rs
agent_host/src/server/: agent_runtime.rs  background.rs  command_routing.rs  commands.rs  context.rs  extra_tools.rs  foreground.rs  frame_config.rs  incoming.rs  messaging.rs  persistence.rs  progress.rs  remote_execution.rs  runtime_helpers.rs  security.rs  session_runner.rs  subagents.rs  workspace_summary.rs
agent_host/src/upgrade/: mod.rs  v0_10.rs  v0_11.rs  v0_12.rs  v0_13.rs  v0_14.rs  v0_19.rs  v0_20.rs  v0_21.rs  v0_22.rs  v0_23.rs  v0_24.rs  v0_31.rs  v0_32.rs  v0_33.rs  v0_34.rs  v0_35.rs  v0_36.rs  v0_37.rs  v0_38.rs  v0_39.rs  v0_5.rs  v0_6.rs  v0_7.rs  v0_9.rs
agent_host/src/zgent/: app_bridge.rs  chat_compat.rs  client.rs  compaction.rs  context.rs  detect.rs  kernel.rs  mod.rs  sandbox.rs  subagent.rs  tools.rs
agent_host/tests/: integration.rs  zgent_app_profile_smoke.rs
agent_server/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  model_config.rs  test_support.rs
core/src/huggingface/: file_resolver.rs  mod.rs  tokenizer_config.rs
core/src/providers/: brave_search.md  brave_search.rs  brave_search_image.md  brave_search_image.rs  brave_search_news.md  brave_search_news.rs  brave_search_video.md  brave_search_video.rs  claude_code.md  claude_code.rs  codex_subscription.md  codex_subscription.rs  common.rs  error_report.rs  forkserver.md  forkserver.rs  mod.rs  openai_image_edit.md  openai_image_edit.rs  openrouter_completion.md  openrouter_completion.rs  openrouter_responses.md  openrouter_responses.rs  output_persistor.rs  pricing.rs
core/src/session_actor/: actor.rs  chat_message.md  chat_message.rs  compressor.rs  file_item.md  logger.rs  media_normalizer.rs  mod.rs  runtime_metadata.rs  session_rpc.rs  session_state.rs  system_prompt.rs  token_estimator.rs  tool_batch.rs  tool_binary.rs  tool_executor.rs  tool_runtime.rs
core/src/session_actor/tool_catalog/: download_tools.rs  dsl_tools.rs  file_tools.rs  host_tools.rs  media_tools.rs  mod.rs  process_tools.rs  schema.rs  skill_tools.rs  web_tools.rs
core/src/session_actor/tool_catalog/file_tools/: common.rs  edit.rs  list.rs  patch.rs  read_write.rs  search.rs  visibility.rs
docs/: DEPLOY.md  WORKFLOW.md  ZGENT_COMPAT_REPORT.md  conversation-router-refactor.md  conversation_new.md  index.html  web-channel-api.html
pricing/: README.md  (+2 more)
stellaclaw/: Cargo.toml
stellaclaw/src/: cache.rs  conversation.rs  conversation_host.rs  conversation_id_manager.rs  conversation_metadata.rs  conversation_new.rs  conversation_state.rs  cron.rs  logger.rs  main.rs  memory.rs  remote_actor.rs  sandbox.rs  session_client.rs  setup.rs  tool_binary_manager.rs  workspace.rs
stellaclaw/src/channels/: mod.rs  telegram.rs  types.rs  web.rs  web_terminal.rs
stellaclaw/src/channels/web/: channel.rs  control.rs  history.rs  http.rs  ids.rs  legacy.rs  main.rs  mod.rs  protocol.rs  state.rs  terminal.rs  time_utils.rs  websocket.rs  workspace.rs
stellaclaw/src/config/: mod.rs
stellaclaw/src/config/loaders/: mod.rs  partyclaw.rs  v0_1.rs  v0_10.rs  v0_2.rs  v0_3.rs  v0_4.rs
stellaclaw/src/conversation/: attachments.rs  cron_script.rs  skill_sync.rs  status.rs  store.rs
stellaclaw/src/service_protos/: agent_session.rs  channel.rs  control.rs  cron.rs  kernel.rs  memory.rs  mod.rs  skill.rs  status.rs  terminal.rs  tool_binary.rs  workspace.rs
stellaclaw/src/services/: agent_session.rs  channel.rs  control.rs  cron.rs  memory.rs  mod.rs  noop.rs  skill.rs  skill_sync.rs  status.rs  terminal.rs  terminal_runtime.rs  tool_binary.rs  workspace.rs
stellaclaw/src/upgrade/: mod.rs  v0_1.rs  v0_10.rs  v0_11.rs  v0_12.rs  v0_13.rs  v0_14.rs  v0_15.rs  v0_16.rs  v0_17.rs  v0_18.rs  v0_19.rs  v0_2.rs  v0_20.rs  v0_21.rs  v0_22.rs  v0_23.rs  v0_24.rs  v0_25.rs  v0_3.rs  v0_4.rs  v0_5.rs  v0_6.rs  v0_7.rs  v0_8.rs  v0_9.rs
(+277 files in other folders)
