[package]
name = "agent_frame"
version = "0.1.0"
edition = "2024"

[lib]
name = "agent_frame"
path = "src/lib.rs"

[[bin]]
name = "run_agent"
path = "src/bin/run_agent.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
humantime = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.14"
