[package]
name = "agent_host"
version = "0.1.0"
edition = "2024"

[dependencies]
agent_frame = { path = "../agent_frame" }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
cron = "0.12"
dotenvy = "0.15"
humantime = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry", "env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.14"
