[package]
name = "agent_host"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "partyclaw"
path = "src/main.rs"

[dependencies]
agent_frame = { path = "../agent_frame" }
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
cron = "0.12"
crossterm = "0.28"
dotenvy = "0.15"
futures-util = "0.3"
hmac = "0.12"
humantime = "2.1"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp", "tiff"] }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry", "env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.14"
