[package]
name = "stellaclaw_core"
version = "1.0.2"
edition = "2021"

[dependencies]
base64 = "0.22"
crossbeam-channel = "0.5"
globset = "0.4"
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
libc = "0.2"
minijinja = { version = "2.19.0", features = ["json", "loop_controls"] }
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiktoken-rs = "0.11"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"] }
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "http", "rustls-tls-webpki-roots"] }
url = "2.5"

[dev-dependencies]
ahash = "0.8"
mockito = "1.7"
