[package]
name = "stellaclaw"
version = "1.0.2"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
stellaclaw_core = { path = "../core" }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
cron = "0.12"
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
pulldown-cmark = "0.12"
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tar = "0.4"
flate2 = "1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing"] }
